--- a/src/main/resources/assets/thebigbang/lang/en_us.json
+++ b/src/main/resources/assets/thebigbang/lang/en_us.json
@@ -103,6 +103,8 @@
 	"entity.thebigbang.stump_entity": "Stump",
 	"entity.thebigbang.octopus_entity": "Octopus",
 	
+	"item.thebigbang.chaos_wand": "Chaos Wand", 
+	
 	"item.thebigbang.music_disc_amoria": "Music Disc Amoria",
 	"item.thebigbang.music_disc_aqua": "Music Disc Aqua",
 	"item.thebigbang.music_disc_ariant": "Music Disc Ariant",
