--- a/src/main/resources/assets/thebigbang/lang/en_us.json
+++ b/src/main/resources/assets/thebigbang/lang/en_us.json
@@ -103,7 +103,8 @@
 	"entity.thebigbang.stump_entity": "Stump",
 	"entity.thebigbang.octopus_entity": "Octopus",
 	
-	"item.thebigbang.chaos_wand": "Chaos Wand", 
+	"item.thebigbang.mithril_wand": "Chaos Wand", 
+	"item.thebigbang.ryden": "Ryden",
 	
 	"item.thebigbang.music_disc_amoria": "Music Disc Amoria",
 	"item.thebigbang.music_disc_aqua": "Music Disc Aqua",
