Throwing Star Update, New/Ambient Sounds and Small Error/Warning Fixes

--- a/src/main/resources/assets/thebigbang/lang/en_us.json
+++ b/src/main/resources/assets/thebigbang/lang/en_us.json
@@ -31,6 +31,7 @@
 	"item.thebigbang.stone_golem_rubble" : "Stone Golem's Rubble",
 	"item.thebigbang.dark_stone_golem_rubble" : "Dark Stone Golem's Rubble",
 	"item.thebigbang.piece_of_ice" : "Piece of Ice",
+	"item.thebigbang.pigs_ribbon" : "Pig's Ribbon",
 	
 	"item.thebigbang.cooked_mushroom_cap" : "Cooked Mushroom Cap",
 	"item.thebigbang.cooked_octopus_leg" : "Cooked Octopus Leg",
@@ -45,13 +46,16 @@
 	"item.thebigbang.sunset_dew" : "Sunset Dew",
 	"item.thebigbang.pure_water" : "Pure Water",
 	"item.thebigbang.cider" : "Cider",
-	"item.thebigbang.drake_blood" : "Drake's Blood",
+	"item.thebigbang.drakes_blood" : "Drake's Blood",
 	"item.thebigbang.sap_of_ancient_tree" : "Sap of Ancient Tree",
 	"item.thebigbang.ice_cream_pop" : "Ice Cream Pop",
 	"item.thebigbang.very_special_sundae" : "Very Special Sundae",
-	
-	"item.thebigbang.stump_spawn_egg": "Stump Spawn Egg",
+
 	"item.thebigbang.octopus_spawn_egg": "Octopus Spawn Egg",
+	"item.thebigbang.stump_spawn_egg": "Stump Spawn Egg",
+	"item.thebigbang.dark_stump_spawn_egg": "Dark Stump Spawn Egg",
+	"item.thebigbang.axe_stump_spawn_egg": "Axe Stump Spawn Egg",
+	"item.thebigbang.dark_axe_stump_spawn_egg": "Dark Axe Stump Spawn Egg",
 	"item.thebigbang.evil_eye_spawn_egg": "Evil Eye Spawn Egg",
 	"item.thebigbang.curse_eye_spawn_egg": "Curse Eye Spawn Egg",
 	"item.thebigbang.cold_eye_spawn_egg": "Cold Eye Spawn Egg",
@@ -76,7 +80,14 @@
 	"item.thebigbang.yeti_spawn_egg": "Yeti Spawn Egg",
 	"item.thebigbang.dark_yeti_spawn_egg": "Dark Yeti Spawn Egg",
 	"item.thebigbang.ribbon_pig_spawn_egg": "Ribbon Pig Spawn Egg",
+	"item.thebigbang.bubbling_spawn_egg": "Bubbling Spawn Egg",
+	"item.thebigbang.green_bubbling_spawn_egg": "Green Bubbling Spawn Egg",
 	
+	"entity.thebigbang.octopus_entity": "Octopus",
+	"entity.thebigbang.stump_entity": "Stump",
+	"entity.thebigbang.dark_stump_entity": "Dark Stump",
+	"entity.thebigbang.axe_stump_entity": "Axe Stump",
+	"entity.thebigbang.dark_axe_stump_entity": "Dark Axe Stump",
 	"entity.thebigbang.evil_eye_entity": "Evil Eye",
 	"entity.thebigbang.curse_eye_entity": "Curse Eye",
 	"entity.thebigbang.cold_eye_entity": "Cold Eye",
@@ -100,11 +111,52 @@
 	"entity.thebigbang.mixed_golem_entity": "Mixed Golem",
 	"entity.thebigbang.ice_golem_entity": "Ice Golem",
 	"entity.thebigbang.fire_golem_entity": "Fire Golem",
-	"entity.thebigbang.stump_entity": "Stump",
-	"entity.thebigbang.octopus_entity": "Octopus",
+	"entity.thebigbang.ribbon_pig": "Ribbon Pig",
+	"entity.thebigbang.bubbling_entity": "Bubbling",
+	"entity.thebigbang.green_bubbling_entity": "Green Bubbling",
 	
 	"item.thebigbang.mithril_wand": "Mithril Wand", 
 	"item.thebigbang.ryden": "Ryden",
+	"item.thebigbang.subi": "Subi Throwing-Stars",
+	"item.thebigbang.tobi": "Tobi Throwing-Stars",
+	"item.thebigbang.steely": "Steely Throwing-Knives",
+	"item.thebigbang.ilbi": "Ilbi Throwing-Stars",
+	
+	"item.thebigbang.apple_helmet": "Apple Hat",
+	"item.thebigbang.apple_chestplate": "Apple Top",	
+	"item.thebigbang.apple_leggings": "Apple Bottom",
+	"item.thebigbang.hwarang_helmet": "Jousting Helmet",
+	"item.thebigbang.hwarang_chestplate": "Hwarang Top",
+	"item.thebigbang.hwarang_leggings": "Hwarang Bottom",
+	"item.thebigbang.hwarang_boots": "War Boots",
+	"item.thebigbang.legolier_helmet": "Robin Hat",
+	"item.thebigbang.legolier_chestplate": "Legolier Top",
+	"item.thebigbang.legolier_leggings": "Legolier Bottom",
+	"item.thebigbang.legolier_boots": "Hunter Boots",
+	"item.thebigbang.nightshift_helmet": "Loosecap",
+	"item.thebigbang.nightshift_chestplate": "Nightshift Top",
+	"item.thebigbang.nightshift_leggings": "Nightshift Bottom",
+	"item.thebigbang.nightshift_boots": "Ninja Sandals",
+	"item.thebigbang.starlight_helmet": "Guiltian",
+	"item.thebigbang.starlight_chestplate": "Starlight Top",
+	"item.thebigbang.starlight_leggings": "Starlight Bottom",
+	"item.thebigbang.starlight_boots": "Magicshoes",
+	"item.thebigbang.jangoon_helmet": "Duke",
+	"item.thebigbang.jangoon_chestplate": "Jangoon Top",
+	"item.thebigbang.jangoon_leggings": "Jangoon Bottom",
+	"item.thebigbang.jangoon_boots": "Battle Grieves",
+	"item.thebigbang.piette_helmet": "Falcon",
+	"item.thebigbang.piette_chestplate": "Piette Top",
+	"item.thebigbang.piette_leggings": "Piette Bottom",
+	"item.thebigbang.piette_boots": "Piette Shoes",
+	"item.thebigbang.pilfer_helmet": "Pilfer",
+	"item.thebigbang.pilfer_chestplate": "Sneak Top",
+	"item.thebigbang.pilfer_leggings": "Sneak Bottom",
+	"item.thebigbang.pilfer_boots": "Lappy Boots",
+	"item.thebigbang.goldwind_helmet": "Golden Circlet",
+	"item.thebigbang.goldwind_chestplate": "Calas Top",
+	"item.thebigbang.goldwind_leggings": "Calas Bottom",
+	"item.thebigbang.goldwind_boots": "Goldwind Shoes",
 	
 	"item.thebigbang.music_disc_amoria": "Music Disc Amoria",
 	"item.thebigbang.music_disc_aqua": "Music Disc Aqua",
