Loot tables, small fixes, new items
Added music discs to loot tables, fixed some minor bugs, added drake skull and dragon skin. Some lang file additions. Finally fixed "now playing" issue

--- a/src/main/resources/assets/thebigbang/lang/en_us.json
+++ b/src/main/resources/assets/thebigbang/lang/en_us.json
@@ -158,19 +158,36 @@
 	"item.thebigbang.goldwind_leggings": "Calas Bottom",
 	"item.thebigbang.goldwind_boots": "Goldwind Shoes",
 	
-	"item.thebigbang.music_disc_amoria": "Music Disc Amoria",
-	"item.thebigbang.music_disc_aqua": "Music Disc Aqua",
-	"item.thebigbang.music_disc_ariant": "Music Disc Ariant",
-	"item.thebigbang.music_disc_dilleke": "Music Disc Dilleke",
-	"item.thebigbang.music_disc_ellinia": "Music Disc Ellinia",
-	"item.thebigbang.music_disc_harbor": "Music Disc Harbor",
-	"item.thebigbang.music_disc_henesys": "Music Disc Henesys",
-	"item.thebigbang.music_disc_kerning": "Music Disc Kerning",
-	"item.thebigbang.music_disc_ludibrium": "Music Disc Ludibrium",
-	"item.thebigbang.music_disc_omega": "Music Disc Omega",
-	"item.thebigbang.music_disc_orbis": "Music Disc Orbis",
-	"item.thebigbang.music_disc_perion": "Music Disc Perion",
-	"item.thebigbang.music_disc_raindrop": "Music Disc Raindrop",
-	"item.thebigbang.music_disc_square": "Music Disc Square"
+	"item.thebigbang.music_disc_amoria": "Music Disc",
+	"item.thebigbang.music_disc_aqua": "Music Disc",
+	"item.thebigbang.music_disc_ariant": "Music Disc",
+	"item.thebigbang.music_disc_dilleke": "Music Disc",
+	"item.thebigbang.music_disc_ellinia": "Music Disc",
+	"item.thebigbang.music_disc_harbor": "Music Disc",
+	"item.thebigbang.music_disc_henesys": "Music Disc",
+	"item.thebigbang.music_disc_kerning": "Music Disc",
+	"item.thebigbang.music_disc_ludibrium": "Music Disc",
+	"item.thebigbang.music_disc_omega": "Music Disc",
+	"item.thebigbang.music_disc_orbis": "Music Disc",
+	"item.thebigbang.music_disc_perion": "Music Disc",
+	"item.thebigbang.music_disc_raindrop": "Music Disc",
+	"item.thebigbang.music_disc_square": "Music Disc",
+
+	"item.thebigbang.music_disc_amoria.desc": "The Big Bang - Love",
+	"item.thebigbang.music_disc_aqua.desc": "The Big Bang - Water",
+	"item.thebigbang.music_disc_ariant.desc": "The Big Bang - Sand",
+	"item.thebigbang.music_disc_dilleke.desc": "The Big Bang - Sewer",
+	"item.thebigbang.music_disc_ellinia.desc": "The Big Bang - Tree",
+	"item.thebigbang.music_disc_harbor.desc": "The Big Bang - Harbor",
+	"item.thebigbang.music_disc_henesys.desc": "The Big Bang - Market",
+	"item.thebigbang.music_disc_kerning.desc": "The Big Bang - Slum",
+	"item.thebigbang.music_disc_ludibrium.desc": "The Big Bang - Toy",
+	"item.thebigbang.music_disc_omega.desc": "The Big Bang - Silo",
+	"item.thebigbang.music_disc_orbis.desc": "The Big Bang - Station",
+	"item.thebigbang.music_disc_perion.desc": "The Big Bang - Camp",
+	"item.thebigbang.music_disc_raindrop.desc": "The Big Bang - Egg",
+	"item.thebigbang.music_disc_square.desc": "The Big Bang - Square"
+	
+
 
 }
