Small tweaks and attempts at bug fixes for trailer

--- a/src/main/resources/assets/thebigbang/lang/en_us.json
+++ b/src/main/resources/assets/thebigbang/lang/en_us.json
@@ -2,19 +2,20 @@
 	"item.thebigbang.adamantium": "Adamantium",
 	"item.thebigbang.mithril": "Mithril",
 	"item.thebigbang.orihalcon": "Orihalcon",
-	"item.thebigbang.dormant_adamantium_ingot": "Dormant Adamantium Plate",
-	"item.thebigbang.dormant_mithril_ingot": "Dormant Mithril Plate",
-	"item.thebigbang.dormant_orihalcon_ingot": "Dormant Orihalcon Plate",
-	"item.thebigbang.blessed_adamantium_ingot": "Blessed Adamantium Plate",
-	"item.thebigbang.blessed_mithril_ingot": "Blessed Mithril Plate",
-	"item.thebigbang.blessed_orihalcon_ingot": "Blessed Orihalcon Plate",
 	"item.thebigbang.adamantium_nugget": "Adamantium Nugget",
 	"item.thebigbang.mithril_nugget": "Mithril Nugget",
 	"item.thebigbang.orihalcon_nugget": "Orihalcon Nugget",
-	"item.thebigbang.dormant_magic_rock": "Dormant Magic Rock",
-	"item.thebigbang.blessed_magic_rock": "Blessed Magic Rock",
-	"item.thebigbang.dormant_summoning_rock": "Dormant Summoning Rock",
-	"item.thebigbang.blessed_summoning_rock": "Blessed Summoning Rock",
+	"item.thebigbang.dormant_adamantium_ingot": "Adamantium Plate",
+	"item.thebigbang.dormant_mithril_ingot": "Mithril Plate",
+	"item.thebigbang.dormant_orihalcon_ingot": "Orihalcon Plate",
+	"item.thebigbang.blessed_adamantium_ingot": "Adamantium Plate",
+	"item.thebigbang.blessed_mithril_ingot": "Mithril Plate",
+	"item.thebigbang.blessed_orihalcon_ingot": "Orihalcon Plate",
+	"item.thebigbang.blessed_gold_ingot": "Gold Plate",
+	"item.thebigbang.dormant_magic_rock": "Magic Rock",
+	"item.thebigbang.blessed_magic_rock": "Magic Rock",
+	"item.thebigbang.dormant_summoning_rock": "Summoning Rock",
+	"item.thebigbang.blessed_summoning_rock": "Summoning Rock",
 
 	"block.thebigbang.adamantium_ore": "Adamantium Ore",
 	"block.thebigbang.mithril_ore": "Mithril Ore",
