add pepe beak item

--- a/src/main/resources/assets/thebigbang/lang/en_us.json
+++ b/src/main/resources/assets/thebigbang/lang/en_us.json
@@ -55,6 +55,7 @@
 	"item.thebigbang.pigs_ribbon" : "Pig's Ribbon",
 	"item.thebigbang.drakes_skull": "Drake's Skull",
 	"item.thebigbang.dragon_skin": "Dragon Skin",
+	"item.thebigbang.pepe_beak": "Pepe's Beak",
 	
 	"item.thebigbang.cooked_mushroom_cap" : "Cooked Mushroom Cap",
 	"item.thebigbang.cooked_octopus_leg" : "Cooked Octopus Leg",
