fiddle with entities, structures and add the quest finder

--- a/src/main/resources/assets/thebigbang/lang/en_us.json
+++ b/src/main/resources/assets/thebigbang/lang/en_us.json
@@ -17,6 +17,7 @@
 	"item.thebigbang.dormant_summoning_rock": "Summoning Rock",
 	"item.thebigbang.blessed_summoning_rock": "Summoning Rock",
 	"item.thebigbang.mana_rock": "Floating Mana Rock",
+	"item.thebigbang.quest_finder": "Quest Finder",
 
 	"block.thebigbang.adamantium_ore": "Adamantium Ore",
 	"block.thebigbang.mithril_ore": "Mithril Ore",
