last changes to version 1.14, which should hopefully make it compile

--- a/src/main/resources/assets/thebigbang/lang/en_us.json
+++ b/src/main/resources/assets/thebigbang/lang/en_us.json
@@ -37,6 +37,11 @@
 	"block.thebigbang.blue_mushroom_stairs": "Blue Mushroom Stairs",
 	"block.thebigbang.danger_sign": "Wanted Sign",
 	"block.thebigbang.divine_altar": "Divine Altar",
+	"block.thebigbang.mixed_cobblestone": "Mixed Cobblestone",
+	"block.thebigbang.red_maple_sapling": "Red Maple Sapling",
+	"block.thebigbang.red_maple_leaves": "Red Maple Leaves",
+	"block.thebigbang.yellow_maple_sapling": "Yellow Maple Sapling",
+	"block.thebigbang.yellow_maple_leaves": "Yellop Maple Leaves",
 	
 	"item.thebigbang.octopus_leg": "Octopus Leg",
 	"item.thebigbang.evil_eye_tail": "Evil Eye Tail",
